# sentiment-analyzer

./: .env.dist  .pre-commit-config.yaml  .secrets.baseline  README.md  docker-compose.yml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr_tests.yml
deploy/analyzer/: Dockerfile
deploy/nginx/: Dockerfile  nginx.conf  nginx.conf.template
deploy/nginx/templates/: default.conf.template
src/analyzer/: __main__.py  bootstrap.py  di.py  web.py
src/analyzer/infrastructure/: configs.py  neural.py  testing.py  web.py
src/analyzer/infrastructure/neural/: adapters.py  annotations.py  provider.py
src/analyzer/presentation/v1/graphql/: __init__.py  graphql.py  mutation.py  query.py
src/analyzer/presentation/v1/routes/: healthcheck.py  sentiment.py
src/analyzer/usecases/: interactors.py  interfaces.py
tests/: conftest.py  test_cli.py  test_endpoints.py  test_graphql.py  test_interactors.py
